# tsync

./: COPYRIGHT  Cargo.toml  README.md  test.d.ts
.github/: dependabot.yml
.github/workflows/: CI.yml
src/: consts.rs  enums.rs  lib.rs  main.rs  structs.rs  typescript.rs  utils.rs
src/to_typescript/: consts.rs  enums.rs  mod.rs  structs.rs  type_item.rs
test/: test_all.sh  tsync.sh
test/const/: rust.rs  tsync.sh  typescript.ts
test/const_enum_numeric/: rust.rs  tsync.sh  typescript.d.ts  typescript.ts
test/directory_input/: tsync.sh  typescript.d.ts
test/directory_input/directory/: 1_book.rs  2_chapter.rs  3_utc.rs  not a rust file.txt
test/doc_comments/: rust.rs  typescript.d.ts  typescript.ts
test/enum/: rust.rs  typescript.d.ts  typescript.ts
test/enum_newtype/: rust.rs  typescript.d.ts  typescript.ts
test/enum_numeric/: typescript.d.ts  typescript.ts
test/file_input/: rust.rs  tsync.sh  typescript.d.ts
test/generic/: rust.rs  typescript.d.ts  typescript.ts
test/issue-43/: rust.rs  typescript.d.ts  typescript.ts
test/issue-55/: rust.rs  typescript.d.ts  typescript.ts
test/issue-58/: rust.rs  typescript.d.ts  typescript.ts
test/issue-63/: rust.rs  typescript.d.ts  typescript.ts
test/issue-65-untagged-enums/: rust.rs  typescript.d.ts  typescript.ts
test/raw_identifiers/: rust.rs  typescript.d.ts  typescript.ts
test/struct/: rust.rs  tsync.sh  typescript.d.ts  typescript.ts
test/type/: rust.rs  tsync.sh  typescript.d.ts
tests/: codegen.rs
tsync-macro/: Cargo.toml
