[package]
name = "tsync"
description = "Generate typescript types from rust code."
version = "1.6.2"
readme = "README.md"
repository = "https://github.com/Wulf/tsync"
license = "MIT OR Apache-2.0"
keywords = ["typescript", "types", "generation", "macro"]
categories = ["command-line-utilities", "development-tools", "development-tools::ffi", "web-programming"]
authors = ["Haris <4259838+Wulf@users.noreply.github.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.26"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.52"
quote = "1.0.23"
walkdir = "2.3.2"
tsync-macro = "0.1.0"
convert_case = "0.6.0"

[lib]
name = "tsync"
path = "src/lib.rs"

[[bin]]
name = "tsync"
test = false
path = "bin/main.rs"
